--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-stream = "0.3.5"
+futures = "0.3.30"
 thirtyfour = "0.31"
+tokio = { version = "1", features = ["full"] }
