--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 async-stream = "0.3.5"
 futures = "0.3.30"
 thirtyfour = "0.31"
+thiserror = "1"
 tokio = { version = "1", features = ["full"] }
